fix: correcting z-index

--- a/source/sass/step.scss
+++ b/source/sass/step.scss
@@ -1,7 +1,7 @@
 @use "./variables.scss" as *;
 
 .mod-frontend-form__steps {
-    z-index: 5000;
+    z-index: 5;
 
     /* Step */
     .mod-frontend-form__step-container {
@@ -74,7 +74,7 @@
                 border-radius: 50%;
                 animation: spin 0.8s linear infinite;
                 transform: translate(-50%, -50%);
-                z-index: 3001;
+                z-index: 3;
             }
         }
 
@@ -94,7 +94,7 @@
 
 
 .mod-frontend-form__step-buttons {
-    z-index: 4000;
+    z-index: 4;
     display: flex;
     justify-content: flex-end;
     margin-top: calc(var(--base, 8px) * 2);
