--- a/source/sass/working.scss
+++ b/source/sass/working.scss
@@ -7,14 +7,13 @@
     left: 0;
     background: rgba(255, 255, 255, 0.8);
     backdrop-filter: blur(5px);
-    z-index: 2000;
     display: flex;
     flex-direction: column;
     gap: calc(var(--base, 8px) * 4);
     justify-content: center;
     align-items: center;
     padding: calc(var(--base, 8px) * 4);
-    z-index: 6000;
+    z-index: 6;
 
     > .mod-frontend-form__working-content {
         width: 90%;
